2007-02-08  Michael Goffioul  <michael.goffioul@swing.be>

	* DLD-FUNCTIONS/__glpk__.cc: Include glplib.h if glpk.h does not.
	Provide definitions for lib_set_fault_hook and lib_set_print_hook
	if they are not defined.

2007-02-07  John W. Eaton  <jwe@octave.org>

	* defaults.cc (subst_octave_home):
	Only substitute at beginning of string.

	* ls-hdf5.cc (save_hdf5_empty): Use OCTAVE_LOCAL_BUFFER.
	* ov-bool-mat.cc (octave_bool_matrix::save_hdf5,
	octave_bool_matrix::load_hdf5): Likewise.
	* ov-bool-sparse.cc (octave_sparse_bool_matrix::save_hdf5,
	octave_sparse_bool_matrix::load_hdf5): Likewise.

2007-02-07  Michael Goffioul  <michael.goffioul@swing.be>

	* ov-cell.cc (octave_cell::save_hdf5): Correct test for H5Dwrite
	return value.

2007-02-07  John W. Eaton  <jwe@octave.org>

	* zfstream.cc (gzfilebuf::open_mode): Always append "b" to c_mode.

	* toplev.cc (Foctave_config_info): Use struct for conf_info.
	Call subst_octave_home on selected values when initializing map.
	* defaults.cc (subst_octave_home): Now extern.
	* defaults.h.in: Provide decl.

2007-02-05  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray_number::as_octave_value): Fake mxSINGLE_CLASS
	by returning double-precision values.
	(mxArray_sparse::as_octave_value): Clarify error message.

	* ov-complex.h (octave_complex): Use std instead of OCTAVE_STD
	since the latter was unconditionally defined to be std anyway.

2007-02-05  Michael Goffioul  <michael.goffioul@swing.be>

	* ov-complex.h: Tag octave_complex class with OCTINTERP_API.

2007-01-30  John W. Eaton  <jwe@octave.org>

	* Merge of changes from graphics-branch:

	2007-01-26  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__contourc__.cc: New function.
	* Makefile.in (DLD_XSRC): Add it to the list.

	2007-01-25  John W. Eaton  <jwe@octave.org>

	* input.cc (Vdrawnow_requested): New static variable.
	(F__request_drawnow__): New function.
	(interactive_input): New function.  Update Vlast_prompt_time here.